--- a/index.html
+++ b/index.html
@@ -1,10 +1,57 @@
 <!DOCTYPE html>
-<html>
-<body>
-
-<h1>My First Heading</h1>
-
-<p>XD</p>
-
-</body>
+<html lang="pl">
+	<head>
+		<meta charset="UTF-8">
+	  	<meta name="description" content="Strona poświęcona pięknej wsi znajdującej się w Małopolsce w gminie Mszana Dolna, odkryj jej uroki.">
+	  	<meta name="keywords" content="kasinka mała,wypoczynek,wakacje,kasinka,mala">
+	 	<meta name="author" content="Mateusz Świątek">
+	 	<!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
+	 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+	 	<link href="https://fonts.googleapis.com/css?family=Courgette" rel="stylesheet">
+	 	<link rel="stylesheet" type="text/css" href="main.css">
+	 	<title>Kasinka Mała - idealne miejsce do wypoczynku</title>
+	</head>
+	<body>
+		<section class="nav">
+			<header class="nav-header">Kasinka Mała</header>
+			<div class="nav-armsimg"></div>
+			<nav>
+				<ol>
+					
+				</ol>
+			</nav>
+		</section>
+		<section class="main-img">
+			<div class="conteiner">
+				<header class="welcoming-header fh">Wypoczynek?</header>
+				<header class="welcoming-header">Kasinka zaprasza!</header>
+				<div id="arrow">
+					<i class="fa fa-angle-down" aria-hidden="true"></i>
+				</div>
+			</div>
+		</section>
+		<main>
+			<section class="conteiner border-top">
+				<h1>Szukasz miejsca do wypoczynku?</h1>
+				<div class="fa fa-star-o"></div>
+				<div class="flex-conteiner">
+					<article class="item">
+						<h2>Test</h2>
+						<div class="fa fa-calendar-check-o"></div>
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam velit, vulputate eu pharetra nec, mattis ac neque..</p>
+					</article>
+					<article class="item">
+						<h2>Test</h2>
+						<div class="fa fa-futbol-o"></div>
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam velit, vulputate eu pharetra nec, mattis ac neque.</p>
+					</article>
+					<article class="item">
+						<h2>Test</h2>
+						<div class="fa fa-map-o"></div>
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam velit, vulputate eu pharetra nec, mattis ac neque.</p>
+					</article>
+				</div>
+			</section>
+		</main>
+	</body>
 </html>
