--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	 	<!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
 	 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 	 	<link href="https://fonts.googleapis.com/css?family=Courgette" rel="stylesheet">
+	 	<link href="https://fonts.googleapis.com/css?family=Luckiest+Guy" rel="stylesheet">
 	 	<link rel="stylesheet" type="text/css" href="main.css">
 	 	<title>Kasinka Mała - idealne miejsce do wypoczynku</title>
 	</head>
@@ -51,6 +52,11 @@
 						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam velit, vulputate eu pharetra nec, mattis ac neque. Duis vulputate commodo lectus, ac blandit elit tincidunt id.</p>
 					</article>
 				</div>
+				<div class="fa fa-star-o str"></div>
+			</section>
+			<section>
+				
+
 			</section>
 		</main>
 	</body>
