--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	  	<meta name="description" content="Strona poświęcona pięknej wsi znajdującej się w Małopolsce w gminie Mszana Dolna, odkryj jej uroki.">
 	  	<meta name="keywords" content="kasinka mała,wypoczynek,wakacje,kasinka,mala">
 	 	<meta name="author" content="Mateusz Świątek">
-	 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 	 	<link href="https://fonts.googleapis.com/css?family=Courgette" rel="stylesheet">
 	 	<link href="https://fonts.googleapis.com/css?family=Luckiest+Guy" rel="stylesheet">
@@ -34,7 +34,8 @@
 		<main>
 			<section class="conteiner border-top">
 				<h1>Szukasz miejsca do wypoczynku?</h1>
-				<div class="fa fa-star-o"></div>
+
+				<div class="margins"><div class="fa fa-star-o"></div></div>
 				<div class="flex-conteiner">
 					<article class="item">
 						<h2>Test</h2>
