--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	  	<meta name="description" content="Strona poświęcona pięknej wsi znajdującej się w Małopolsce w gminie Mszana Dolna, odkryj jej uroki.">
 	  	<meta name="keywords" content="kasinka mała,wypoczynek,wakacje,kasinka,mala">
 	 	<meta name="author" content="Mateusz Świątek">
-	 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 	 	<link href="https://fonts.googleapis.com/css?family=Courgette" rel="stylesheet">
 	 	<link href="https://fonts.googleapis.com/css?family=Luckiest+Guy" rel="stylesheet">
@@ -34,8 +34,6 @@
 		<main>
 			<section class="conteiner border-top">
 				<h1>Szukasz miejsca do wypoczynku?</h1>
-
-				<div class="margins"><div class="fa fa-star-o"></div></div>
 				<div class="flex-conteiner">
 					<article class="item">
 						<h2>Test</h2>
@@ -53,11 +51,27 @@
 						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam velit, vulputate eu pharetra nec, mattis ac neque. Duis vulputate commodo lectus, ac blandit elit tincidunt id.</p>
 					</article>
 				</div>
-				<div class="fa fa-star-o str"></div>
+				<div class="after-line"></div>
 			</section>
-			<section>
-				
-
+			<section class="conteiner border-top">
+				<article>
+					<div>
+						<h1>Test</h1>
+						<p>
+							Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam velit, vulputate eu pharetra nec, mattis ac neque. Duis vulputate commodo lectus, ac blandit elit tincidunt id. Sed rhoncus, tortor sed eleifend tristique, tortor mauris molestie elit, et lacinia ipsum quam nec dui. Quisque nec mauris sit amet elit iaculis pretium sit amet quis magna. Aenean velit odio, elementum in tempus ut, vehicula eu diam. Pellentesque rhoncus aliquam mattis. Ut vulputate eros sed felis sodales nec vulputate justo hendrerit. Vivamus varius pretium ligula, a aliquam odio euismod sit amet. Quisque laoreet sem sit amet orci ullamcorper at ultricies metus viverra. Pellentesque arcu mauris, malesuada quis ornare accumsan, blandit sed diam.
+						</p>
+					</div>
+					<div class="art first-img"></div>
+				</article>
+				<article>
+					<div class="art second-img"></div>
+					<div>
+						<h1>Test</h1>
+						<p>
+							Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam velit, vulputate eu pharetra nec, mattis ac neque. Duis vulputate commodo lectus, ac blandit elit tincidunt id. Sed rhoncus, tortor sed eleifend tristique, tortor mauris molestie elit, et lacinia ipsum quam nec dui. Quisque nec mauris sit amet elit iaculis pretium sit amet quis magna. Aenean velit odio, elementum in tempus ut, vehicula eu diam. Pellentesque rhoncus aliquam mattis. Ut vulputate eros sed felis sodales nec vulputate justo hendrerit. Vivamus varius pretium ligula, a aliquam odio euismod sit amet. Quisque laoreet sem sit amet orci ullamcorper at ultricies metus viverra. Pellentesque arcu mauris, malesuada quis ornare accumsan, blandit sed diam.
+						</p>
+					</div>
+				</article>
 			</section>
 		</main>
 	</body>
