--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 		<main>
 			<section class="conteiner border-top">
 				<h1>Szukasz miejsca do wypoczynku?</h1>
+				<div class="after-line"></div>
 				<div class="flex-conteiner">
 					<article class="item">
 						<h2>Test</h2>
@@ -53,27 +54,68 @@
 				</div>
 				<div class="after-line"></div>
 			</section>
+			<section class="osrodek-img">
+				<div class="conteiner">
+					<div class="osrodek-text">
+						<h1>Test</h1>
+						<p>
+							Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam velit, vulputate eu pharetra nec, mattis ac neque. Duis vulputate commodo lectus, ac blandit elit tincidunt id. Sed rhoncus, tortor sed eleifend tristique, tortor mauris molestie elit, et lacinia ipsum quam nec dui. Quisque nec mauris sit amet elit iaculis pretium sit amet quis magna. Aenean velit odio, elementum in tempus ut, vehicula eu diam. Pellentesque rhoncus aliquam mattis.
+						</p>
+					</div>
+				</div>
+			</section>
+			<div class="after-line"></div>
 			<section class="conteiner">
 				<article class="flex-conteiner">
+					<div class="art first-img"></div>
 					<div class="art-text">
 						<h1>Test</h1>
 						<p>
 							Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam velit, vulputate eu pharetra nec, mattis ac neque. Duis vulputate commodo lectus, ac blandit elit tincidunt id. Sed rhoncus, tortor sed eleifend tristique, tortor mauris molestie elit, et lacinia ipsum quam nec dui. Quisque nec mauris sit amet elit iaculis pretium sit amet quis magna. Aenean velit odio, elementum in tempus ut, vehicula eu diam. Pellentesque rhoncus aliquam mattis. Ut vulputate eros sed felis sodales nec vulputate justo hendrerit. Vivamus varius pretium ligula, a aliquam odio euismod sit amet. Quisque laoreet sem sit amet orci ullamcorper at ultricies metus viverra. 
 						</p>
 					</div>
-					<div class="art first-img"></div>
 				</article>
 				<div class="after-line"></div>
 				<article class="flex-conteiner">
-					<div class="art second-img"></div>
 					<div class="art-text">
 						<h1>Test</h1>
 						<p>
 							Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam velit, vulputate eu pharetra nec, mattis ac neque. Duis vulputate commodo lectus, ac blandit elit tincidunt id. Sed rhoncus, tortor sed eleifend tristique, tortor mauris molestie elit, et lacinia ipsum quam nec dui. Quisque nec mauris sit amet elit iaculis pretium sit amet quis magna. Aenean velit odio, elementum in tempus ut, vehicula eu diam. Pellentesque rhoncus aliquam mattis. Ut vulputate eros sed felis sodales nec vulputate justo hendrerit. Vivamus varius pretium ligula, a aliquam odio euismod sit amet. Quisque laoreet sem sit amet orci ullamcorper at ultricies metus viverra. 
 						</p>
 					</div>
+					<div class="art second-img"></div>
 				</article>
-			</section>
+			</section>	
 		</main>
+		<div class="after-line"></div>
+		<section class="weather-img">
+			<div class="conteiner" id="padding-zero">
+				<div id="weather-keeper">
+					<div id="inpl-weather-main" data-icT="1" data-cId="13044" data-clBg="2980b9" data-clTxt="f8f8f8" data-clLink="ffffff" data-txtDesc="1" data-fTemp="1" data-crPs="1" data-crWind="1" data-fr="1" data-wdh="300" data-hIf="400" data-d="https://widgets.interia.pl" style="position:relative;width:300px;background-color:#2980b9">
+						<div id="inpl-weather-links" style="background-color:#2980b9; padding:5px 0px 15px;text-align:center">
+						   <a id="wlHbh" style="color:#ffffff;font-size:13px;padding-right:24px;text-decoration:none;" href="https://pogoda.interia.pl/prognoza-szczegolowa-,cId,undefined" title=" - prognoza pogody" >Godzina po godzinie </a>
+						   <a id="wlfr" style="color:#ffffff;font-size:13px;text-decoration:none;" href="https://pogoda.interia.pl/prognoza-dlugoterminowa-,cId,undefined" title=" - prognoza pogody" >Na 25 dni</a>
+						 </div>
+					 </div>
+					 <script type="text/javascript">
+					   (function(d, t, i) {
+					        if (d.getElementById(i)) return;
+					            var f = d.getElementsByTagName(t)[0], js = d.createElement(t); 
+					            js.id = i; js.src = "https://w.iplsc.com/widget/weather.jssc";
+					            f.parentNode.appendChild(js);
+					     }(document, "script", "widget-js"));
+ 					</script>
+				</div>
+			</div>
+		</section>
+		<section class="conteiner">
+			<div class="after-line"></div>
+			<h1 class="font-size">Mapa</h1>
+			<div class="after-line"></div>
+			<div id="map">
+				<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d41276.7240569874!2d20.00548901937929!3d49.71465621963869!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47160cf1516e74f7%3A0xf098bedfdfd87bad!2sKasinka+Ma%C5%82a!5e0!3m2!1spl!2spl!4v1533997206490" width="800" height="600" frameborder="0" style="border:0" allowfullscreen></iframe>
+			</div>
+		</section>
+		<footer class="conteiner">Wszelkie prawa zastrzeżone &copy Mateusz Świątek</footer>
 	</body>
 </html>
