--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 	  	<meta name="keywords" content="kasinka mała,wypoczynek,wakacje,kasinka,mala">
 	 	<meta name="author" content="Mateusz Świątek">
 	 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+		<script type="text/javascript" src="plik.js"></script>
 	 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 	 	<link href="https://fonts.googleapis.com/css?family=Courgette" rel="stylesheet">
 	 	<link href="https://fonts.googleapis.com/css?family=Luckiest+Guy" rel="stylesheet">
@@ -13,16 +15,20 @@
 	 	<title>Kasinka Mała - idealne miejsce do wypoczynku</title>
 	</head>
 	<body>
-		<section class="nav">
+		<section id="nav">
 			<header class="nav-header">Kasinka Mała</header>
 			<div class="nav-armsimg"></div>
 			<nav>
 				<ol>
-					
+					<li><a href="#main"><p>Start</p></a></li>
+					<li><a href="#lubogoszcz"><p>Lubogoszcz</p></a></li>
+					<li><a href="#lokacje"><p>Lokacje</p></a></li>
+					<li><a href="#pogoda"><p>Pogoda</p></a></li>
+					<li><a href="#mapa"><p>Mapa</p></a></li>
 				</ol>
 			</nav>
 		</section>
-		<section class="main-img">
+		<section class="main-img" id="start">
 			<div class="conteiner">
 				<header class="welcoming-header fh">Wypoczynek?</header>
 				<header class="welcoming-header">Kasinka zaprasza!</header>
@@ -31,7 +37,7 @@
 				</div>
 			</div>
 		</section>
-		<main>
+		<main id="main">
 			<section class="conteiner border-top">
 				<h1>Szukasz miejsca do wypoczynku?</h1>
 				<div class="after-line"></div>
@@ -52,9 +58,9 @@
 						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam velit, vulputate eu pharetra nec, mattis ac neque. Duis vulputate commodo lectus, ac blandit elit tincidunt id.</p>
 					</article>
 				</div>
-				<div class="after-line"></div>
+				<div class="after-line" ></div>
 			</section>
-			<section class="osrodek-img">
+			<section class="osrodek-img border-top" id="lubogoszcz">
 				<div class="conteiner">
 					<div class="osrodek-text">
 						<h1>Test</h1>
@@ -64,8 +70,8 @@
 					</div>
 				</div>
 			</section>
-			<div class="after-line"></div>
-			<section class="conteiner">
+			<section class="conteiner border-top" id="lokacje">
+				<div class="after-line"></div>
 				<article class="flex-conteiner">
 					<div class="art first-img"></div>
 					<div class="art-text">
@@ -88,7 +94,7 @@
 			</section>	
 		</main>
 		<div class="after-line"></div>
-		<section class="weather-img">
+		<section class="weather-img border-top" id="pogoda">
 			<div class="conteiner" id="padding-zero">
 				<div id="weather-keeper">
 					<div id="inpl-weather-main" data-icT="1" data-cId="13044" data-clBg="2980b9" data-clTxt="f8f8f8" data-clLink="ffffff" data-txtDesc="1" data-fTemp="1" data-crPs="1" data-crWind="1" data-fr="1" data-wdh="300" data-hIf="400" data-d="https://widgets.interia.pl" style="position:relative;width:300px;background-color:#2980b9">
@@ -108,12 +114,12 @@
 				</div>
 			</div>
 		</section>
-		<section class="conteiner">
-			<div class="after-line"></div>
+		<section class="conteiner border-top" id="mapa">
+			
 			<h1 class="font-size">Mapa</h1>
 			<div class="after-line"></div>
 			<div id="map">
-				<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d41276.7240569874!2d20.00548901937929!3d49.71465621963869!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47160cf1516e74f7%3A0xf098bedfdfd87bad!2sKasinka+Ma%C5%82a!5e0!3m2!1spl!2spl!4v1533997206490" width="800" height="600" frameborder="0" style="border:0" allowfullscreen></iframe>
+				<iframe  class="iframe" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d41276.7240569874!2d20.00548901937929!3d49.71465621963869!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47160cf1516e74f7%3A0xf098bedfdfd87bad!2sKasinka+Ma%C5%82a!5e0!3m2!1spl!2spl!4v1533997206490" frameborder="0" style="border:0" allowfullscreen></iframe>
 			</div>
 		</section>
 		<footer class="conteiner">Wszelkie prawa zastrzeżone &copy Mateusz Świątek</footer>
