--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 			
 			<h1 class="font-size">Mapa</h1>
 			<div class="after-line"></div>
-			<div id="map">
+			<div id="map-responsive">
 				<iframe  class="iframe" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d41276.7240569874!2d20.00548901937929!3d49.71465621963869!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47160cf1516e74f7%3A0xf098bedfdfd87bad!2sKasinka+Ma%C5%82a!5e0!3m2!1spl!2spl!4v1533997206490" frameborder="0" style="border:0" allowfullscreen></iframe>
 			</div>
 		</section>
