--- a/index.html
+++ b/index.html
@@ -27,11 +27,10 @@
 			</nav>
 		</section>
 		<section class="main-img" id="start">
-			<div class="conteiner">
-				<header class="welcoming-header fh">Wypoczynek?</header>
-				<header class="welcoming-header">Kasinka zaprasza!</header>
-				<div id="arrow">
-					<i class="fa fa-angle-down" aria-hidden="true"></i>
+			<div class="conteiner" id="first-img">
+				<div class="absolute">
+					<header class="welcoming-header fh">Wypoczynek?</header>
+					<header class="welcoming-header">Kasinka zaprasza!</header>
 				</div>
 			</div>
 		</section>
@@ -119,6 +118,7 @@
 			<div id="map-responsive">
 				<iframe  class="iframe" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d41276.7240569874!2d20.00548901937929!3d49.71465621963869!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47160cf1516e74f7%3A0xf098bedfdfd87bad!2sKasinka+Ma%C5%82a!5e0!3m2!1spl!2spl!4v1533997206490" frameborder="0" style="border:0" allowfullscreen></iframe>
 			</div>
+			<div class="after-line"></div>
 		</section>
 		<footer class="conteiner">Wszelkie prawa zastrzeżone &copy Mateusz Świątek</footer>
 
