--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 				</ol>
 			</nav>
 		</section>
-		<section class="parallax-window" id="start" data-parallax="scroll" data-image-src="img/main.jpg">
+		<section class="main-img" id="start">
 			<div class="conteiner" id="first-img">
 				<div class="absolute" data-animate="bounceInLeft">
 					<header class="welcoming-header fh">Wypoczynek?</header>
@@ -58,7 +58,7 @@
 				</div>
 				<div class="after-line" data-animate="fadeIn"></div>
 			</section>
-			<section class="border-top parallax-window" id="lubogoszcz" data-parallax="scroll" data-image-src="img/osrodek.jpg">
+			<section class="border-top osrodek-img" id="lubogoszcz">
 				<div class="conteiner">
 					<div class="osrodek-text" data-animate="fadeInLeftBig">
 						<h1>Test</h1>
@@ -92,7 +92,7 @@
 			</section>	
 		</main>
 		<div class="after-line" data-animate="fadeIn"></div>
-		<section class="border-top parallax-window" id="pogoda" id="lubogoszcz" data-parallax="scroll" data-image-src="img/weather.jpg">
+		<section class="border-top weather-img" id="pogoda">
 			<div class="conteiner" id="padding-zero">
 				<div id="weather-keeper" data-animate="zoomIn">
 					<div id="inpl-weather-main" data-icT="1" data-cId="13044" data-clBg="2980b9" data-clTxt="f8f8f8" data-clLink="ffffff" data-txtDesc="1" data-fTemp="1" data-crPs="1" data-crWind="1" data-fr="1" data-wdh="300" data-hIf="400" data-d="https://widgets.interia.pl" style="position:relative;width:300px;background-color:#2980b9">
@@ -124,7 +124,6 @@
 
 		<script type="text/javascript" src="jquery.min.js"></script>
 		<script type="text/javascript" src="plik.js"></script>
-		<script type="text/javascript" src="parallax.js-1.5.0/parallax.js"></script>
 		<script type="text/javascript" src="jquery.viewportchecker.min.js"></script>
 	</body>
 </html>
