--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	</head>
 	<body>
 		<section id="nav">
-			<header class="nav-header">Kasinka Mała</header>
+			<header class="nav-header">Kasinka Mala</header>
 			<div class="nav-armsimg"></div>
 			<nav>
 				<ol>
