--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
 	  	<meta name="keywords" content="kasinka mała,wypoczynek,wakacje,kasinka,mala">
 	 	<meta name="author" content="Mateusz Świątek">
 	 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	 	<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
 	 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 	 	<link href="https://fonts.googleapis.com/css?family=Courgette" rel="stylesheet">
 	 	<link href="https://fonts.googleapis.com/css?family=Luckiest+Guy" rel="stylesheet">
-	 	<link rel="stylesheet" type="text/css" href="main.css">
 	 	<link rel="stylesheet" type="text/css" href="animate.css">
+	 	<link rel="stylesheet" type="text/css" href="main.css">
 	 	<title>Kasinka Mała - idealne miejsce do wypoczynku</title>
 	</head>
 	<body>
@@ -43,27 +44,27 @@
 					<article class="item" data-animate="zoomIn">
 						<h2>Test</h2>
 						<div class="fa fa-calendar-check-o"></div>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam velit, vulputate eu pharetra nec, mattis ac neque. Duis vulputate commodo lectus, ac blandit elit tincidunt id.</p>
+						<p>Lepiej szybko szukaj noclegów bo w okresie wakacyjnym może ich zabraknąć. Większość domostw chętnie udostępnia noclegi turystom, znajdziemy tam również "Pokoje gościnne".</p>
 					</article>
 					<article class="item" data-animate="zoomIn">
 						<h2>Test</h2>
 						<div class="fa fa-futbol-o"></div>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam velit, vulputate eu pharetra nec, mattis ac neque. Duis vulputate commodo lectus, ac blandit elit tincidunt id.</p>
+						<p>Rekreacja w Kasince stoi na wyśmienitym poziomie, znajdziemy tam boiska do piłki nożnej jak i koszykówki czy tenisa ziemnego, nic tylko zabierać sprzęt!</p>
 					</article>
 					<article class="item" data-animate="zoomIn">
 						<h2>Test</h2>
 						<div class="fa fa-map-o"></div>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam velit, vulputate eu pharetra nec, mattis ac neque. Duis vulputate commodo lectus, ac blandit elit tincidunt id.</p>
+						<p>Lokacja znajduję się w górach blisko takich szczytów jak Lubogoszcz, Lubomierz, Śnieżnica, Luboń Wielki. Organizowane są grupowe wycieczki.</p>
 					</article>
 				</div>
-				<div class="after-line" data-animate="fadeIn"></div>
+				<div class="after-line border-top" data-animate="fadeIn"></div>
 			</section>
-			<section class="border-top osrodek-img" id="lubogoszcz">
-				<div class="conteiner">
+			<section class="osrodek-img" id="lubogoszcz">
+				<div class="conteiner" id="padding-top">
 					<div class="osrodek-text" data-animate="fadeInLeftBig">
-						<h1>Test</h1>
+						<h1>Lubogoszcz</h1>
 						<p>
-							Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam velit, vulputate eu pharetra nec, mattis ac neque. Duis vulputate commodo lectus, ac blandit elit tincidunt id. Sed rhoncus, tortor sed eleifend tristique, tortor mauris molestie elit, et lacinia ipsum quam nec dui. Quisque nec mauris sit amet elit iaculis pretium sit amet quis magna. Aenean velit odio, elementum in tempus ut, vehicula eu diam. Pellentesque rhoncus aliquam mattis.
+							Baza Szkoleniowo - Wypoczynkowa „Lubogoszcz” w Kasince Małej podlega pod Krakowski Szkolny Ośrodek Sportowy im. „Szarych Szeregów” w Krakowie, który jest placówką oświatowo- wychowawczą, należącą do grupy placówek wychowania pozaszkolnego. Zlokalizowana jest w Beskidzie Wyspowym na zboczu góry Lubogoszcz. Usytuowana w atrakcyjnym otoczeniu leśnym, klimacie korzystnym dla zdrowia i hartowania organizmu, zbliżonym do mikroklimatu rabczańskiego, przyjaznego szczególnie dzieciom.
 						</p>
 					</div>
 				</div>
@@ -73,26 +74,26 @@
 				<article class="flex-conteiner">
 					<div class="art first-img" data-animate="fadeInLeft"></div>
 					<div class="art-text" data-animate="fadeInRight">
-						<h1>Test</h1>
+						<h1>Trochę historii</h1>
 						<p>
-							Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam velit, vulputate eu pharetra nec, mattis ac neque. Duis vulputate commodo lectus, ac blandit elit tincidunt id. Sed rhoncus, tortor sed eleifend tristique, tortor mauris molestie elit, et lacinia ipsum quam nec dui. Quisque nec mauris sit amet elit iaculis pretium sit amet quis magna. Aenean velit odio, elementum in tempus ut, vehicula eu diam. Pellentesque rhoncus aliquam mattis. Ut vulputate eros sed felis sodales nec vulputate justo hendrerit. Vivamus varius pretium ligula, a aliquam odio euismod sit amet. Quisque laoreet sem sit amet orci ullamcorper at ultricies metus viverra. 
+							Kasinka Mała zawdzięcza swój początek pracy kolonizacyjnej Cystersów Szczyrzyckich, założona w 1360 r. Stanowiła do 1772 r. własność królewską. Oddawana była w dzierżawę różnym panom z różnym szczęściem dla mieszkańców. Po I rozbiorze stanowiła własność cesarskiego skarbu austriackiego; sprzedana przez rząd austriacki w 1812 r. A. Udrańskiemu stała się własnością prywatną. Od 1880 stała się samodzielną gminą, w której w 1884r. założono szkołę ludową. W 1934 r. Kasinka weszła w skład gminy Mszana Dolna. W 2014 roku miała miejsce powódż, od tamtego czasu po odbudowie terenu wokoł rzecznego powstało wiele kompielowisk.
 						</p>
 					</div>
 				</article>
 				<div class="after-line" data-animate="fadeIn"></div>
 				<article class="flex-conteiner">
 					<div class="art-text" data-animate="fadeInLeft">
-						<h1>Test</h1>
+						<h1>Parafia w Kasince Małej</h1>
 						<p>
-							Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam velit, vulputate eu pharetra nec, mattis ac neque. Duis vulputate commodo lectus, ac blandit elit tincidunt id. Sed rhoncus, tortor sed eleifend tristique, tortor mauris molestie elit, et lacinia ipsum quam nec dui. Quisque nec mauris sit amet elit iaculis pretium sit amet quis magna. Aenean velit odio, elementum in tempus ut, vehicula eu diam. Pellentesque rhoncus aliquam mattis. Ut vulputate eros sed felis sodales nec vulputate justo hendrerit. Vivamus varius pretium ligula, a aliquam odio euismod sit amet. Quisque laoreet sem sit amet orci ullamcorper at ultricies metus viverra. 
+							Kościół w Kasince to neogotycka trzynawowa budowla na planie krzyża. Nad wejściem do wznosi się wieża spełniająca także rolę dzwonnicy. Wnętrze ozdobione jest polichromią autorstwa Łukasza Karwowskiego z Krakowa, powstałą w 1934 roku, do której pewne zmiany naniósł w 1965 roku Stefan Wajs z Krosna. Jako powojenne wotum wdzięczności za ocalenie i opiekę Matki Bożej parafianie ufundowali ołtarz Matki Bożej Różańcowej w miejsce podobnego, który spłonął w 1934 roku. Wystrój kościoła uzupełniają: ołtarz Jezusa Miłosiernego, ołtarz Serca Jezusowego, ołtarz Modlitwy Jezusa w Ogrójcu oraz rzeźbione stacje Drogi Krzyżowej.
 						</p>
 					</div>
 					<div class="art second-img" data-animate="fadeInRight"></div>
 				</article>
 			</section>	
 		</main>
-		<div class="after-line" data-animate="fadeIn"></div>
-		<section class="border-top weather-img" id="pogoda">
+		<div class="after-line border-top" data-animate="fadeIn"></div>
+		<section class="weather-img" id="pogoda">
 			<div class="conteiner" id="padding-zero">
 				<div id="weather-keeper" data-animate="zoomIn">
 					<div id="inpl-weather-main" data-icT="1" data-cId="13044" data-clBg="2980b9" data-clTxt="f8f8f8" data-clLink="ffffff" data-txtDesc="1" data-fTemp="1" data-crPs="1" data-crWind="1" data-fr="1" data-wdh="300" data-hIf="400" data-d="https://widgets.interia.pl" style="position:relative;width:300px;background-color:#2980b9">
