--- a/index.html
+++ b/index.html
@@ -42,17 +42,17 @@
 				<div class="after-line" data-animate="fadeIn"></div>
 				<div class="flex-conteiner">
 					<article class="item" data-animate="zoomIn">
-						<h2>Test</h2>
+						<h2>Noclegi</h2>
 						<div class="fa fa-calendar-check-o"></div>
 						<p>Lepiej szybko szukaj noclegów bo w okresie wakacyjnym może ich zabraknąć. Większość domostw chętnie udostępnia noclegi turystom, znajdziemy tam również "Pokoje gościnne".</p>
 					</article>
 					<article class="item" data-animate="zoomIn">
-						<h2>Test</h2>
+						<h2>Sport</h2>
 						<div class="fa fa-futbol-o"></div>
 						<p>Rekreacja w Kasince stoi na wyśmienitym poziomie, znajdziemy tam boiska do piłki nożnej jak i koszykówki czy tenisa ziemnego, nic tylko zabierać sprzęt!</p>
 					</article>
 					<article class="item" data-animate="zoomIn">
-						<h2>Test</h2>
+						<h2>Góry</h2>
 						<div class="fa fa-map-o"></div>
 						<p>Lokacja znajduję się w górach blisko takich szczytów jak Lubogoszcz, Lubomierz, Śnieżnica, Luboń Wielki. Organizowane są grupowe wycieczki.</p>
 					</article>
@@ -121,7 +121,7 @@
 				<iframe  class="iframe" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d41276.7240569874!2d20.00548901937929!3d49.71465621963869!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47160cf1516e74f7%3A0xf098bedfdfd87bad!2sKasinka+Ma%C5%82a!5e0!3m2!1spl!2spl!4v1533997206490" frameborder="0" style="border:0" allowfullscreen></iframe>
 			</div>
 		</section>
-		<footer class="conteiner">Wszelkie prawa zastrzeżone &copy Mateusz Świątek</footer>
+		<footer class="conteiner">Wszelkie prawa zastrzeżone &copy <a href="www.swiatek.online">Mateusz Świątek</a> - odwiedż moje portfolio!</footer>
 
 		<script type="text/javascript" src="jquery.min.js"></script>
 		<script type="text/javascript" src="plik.js"></script>
